# poetry-on-docker

./: .gitignore  Dockerfile  Makefile  docker-compose.yaml  pyproject.toml
app/: main.py
